# openai_api_bot_moriogai

./: LICENSE  aozora_preprocess.py  app.py  pyproject.toml  requirements.txt  text_preprocess.py  text_preprocessing.py
__data__/: tempData.json
