[tool.poetry]
name = "yes"
version = "0.1.0"
description = ""
authors = ["yes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.39.0"
openai = "0.28.1"
numpy = "1.26.4"
pandas = "^2.2.3"
chardet = "^5.2.0"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
